fix dashboard + deposit + transfer